test/jzas/symboltable/invalid/fail04.asm
rot1:	ld a, 0
rot2:	ld b, 0
rot1:	ld c, 0
